--- a/mainpage.css
+++ b/mainpage.css
@@ -3,6 +3,11 @@
     border-radius: 20px;
     margin-top:7px;
  }
+ #cancel{
+    float: left; 
+    border-radius: 20px;
+    margin-top:7px;
+ }
  #buttn{
     float: right; 
     border-radius: 20px;
@@ -10,10 +15,10 @@
  }
  .form{
     border-radius:8px;
-    width:700px;
+    width:550px;
     align-items: center;
     background-color:whitesmoke;
-    margin-top:100px;
+    margin-top:50px;
     margin-left:auto;
     margin-right:auto;
     font-style:arial; 
@@ -51,7 +56,7 @@ table, th, td {
     height:320px;
     align-items: center;
     background-color:lightblue;
-    margin-top:100px;
+    margin-top:80px;
     margin-left:auto;
     margin-right:auto;
     font-style:arial; 
@@ -67,17 +72,39 @@ table, th, td {
     background-color: blue;
 }
 .page{
-    
+   
     font-size:22px;
 }
-
+.ele{
+     border: 1px solid lightgray;
+     text-align: center;
+     margin:1px;
+}
 
 h3{
     text-align:center;
 }
 
 .page{
+   
     font-size:22px;
     text-align:center;
+    background-color: white;
 }
+
+#row1{
+    width:145px;
+}
+ 
+#row2{
+    width:185px;
+}
+ 
+#row3{
+    width:105px;
+}
+#row4{
+    width:auto;
+}
+ 
  
